Add diagram version via @lightenna/react-mermaid-diagram

--- a/app/blog/posts/node-clustering.mdx
+++ b/app/blog/posts/node-clustering.mdx
@@ -133,4 +133,14 @@ flowchart LR;
     A[Request]-->B[Node Server];
     B-->C[Response];
 ```
+
+{/* <Mermaid chart={`flowchart LR;
+    A[Request]-->B[Node Server];
+    B-->C[Response];`} /> */}
+
+<Mermaid className="bg-orange-500 mx-auto" theme="forest">
+{`flowchart LR;
+    A[Request]-->B[Node Server];
+    B-->C[Response];`}
+</Mermaid>
 {/* <Diagram /> */}
